# scrapper

./: .gitignore  README.md  analysis.ipynb  database_manager.py  pyproject.toml  queue_manager.py  session_manager.py  test.scrapper.ipynb  worker.py
